bugfix:2018致用户信-页面往下滚动超出内容后仍继续滚动（overflow:hidden即可解决，但却花费数小时没想到，最后参考xjr代码才想到，基础需要扎实)

--- a/activities/envolopToUsers2018/sourcecode/css/index.css
+++ b/activities/envolopToUsers2018/sourcecode/css/index.css
@@ -14,6 +14,7 @@ body {
     margin:0px;
     padding:0px;
     font-size: 0;
+    overflow: hidden;
 }
 
 .containerClass {
@@ -25,7 +26,6 @@ body {
 
 .containerClass img {
 	width: 100%;
-	height: 100%;
 }
 
 /*当为少儿版面时*/
